--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 tokio = { version = "1.2", features = ["full"] }
 warp = "0.3"
 rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
